// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.28.0

package store

import (
	"database/sql"
	"database/sql/driver"
	"fmt"
	"time"

	"github.com/google/uuid"
)

type MagicTokenType string

const (
	MagicTokenTypeAuth   MagicTokenType = "auth"
	MagicTokenTypeCaldav MagicTokenType = "caldav"
)

func (e *MagicTokenType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = MagicTokenType(s)
	case string:
		*e = MagicTokenType(s)
	default:
		return fmt.Errorf("unsupported scan type for MagicTokenType: %T", src)
	}
	return nil
}

type NullMagicTokenType struct {
	MagicTokenType MagicTokenType
	Valid          bool // Valid is true if MagicTokenType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullMagicTokenType) Scan(value interface{}) error {
	if value == nil {
		ns.MagicTokenType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.MagicTokenType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullMagicTokenType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.MagicTokenType), nil
}

type AuthGoogle struct {
	ID         uuid.UUID
	CustomerID uuid.UUID
	Sub        string
	CreatedAt  time.Time
	UpdatedAt  time.Time
}

type CaldavAccount struct {
	ID         uuid.UUID
	CustomerID uuid.UUID
	Email      string
	Username   string
	Password   string
	CreatedAt  time.Time
	UpdatedAt  time.Time
}

type Customer struct {
	ID        uuid.UUID
	Name      string
	Email     string
	CreatedAt time.Time
	UpdatedAt time.Time
}

type Device struct {
	ID         uuid.UUID
	CustomerID uuid.UUID
	ApnsToken  string
	CreatedAt  time.Time
	UpdatedAt  time.Time
}

type MagicToken struct {
	ID         uuid.UUID
	CustomerID uuid.UUID
	TokenHash  string
	ExpiresAt  time.Time
	UsedAt     sql.NullTime
	CreatedAt  time.Time
	UpdatedAt  time.Time
	TokenType  MagicTokenType
}

type WasappChat struct {
	ID         uuid.UUID
	CustomerID uuid.UUID
	ChatID     string
	CreatedAt  time.Time
	UpdatedAt  time.Time
}

type WasappMessage struct {
	ID           uuid.UUID
	WasappChatID uuid.UUID
	MessageID    string
	SenderName   string
	SenderNumber string
	IsSenderMe   bool
	Body         string
	Timestamp    int64
	CreatedAt    time.Time
	UpdatedAt    time.Time
}
